# xaibe

./: '  .gitignore  README.md  TODO.md  docker-compose.yml  package.json
.github/workflow/: build.yml
.github/workflows/: main.yml  production-build.yml  staging-build.yml
api/: .env  go.mod  go.sum  main.go  package.json  pnpm-lock.yaml  server.ts
api/assertions/: ownership.go
api/cache/: redis.go
api/config/: config.go
api/controllers/: alert_schema.go  alerts.go  applications.go  auth.go  auto_update.go  email.go  organizations.go  payment_controller.go  reset_password.go  service_tokens.go  teams.go  users.go  webhooks.go  websockets.go
api/database/: connect.go
api/email_templates/: invite_new_user.html  reset_password.html  verify_email.html
api/helpers/: utilities.go
api/initializers/application_rooms/: rooms.go
api/initializers/database/: connect.go
api/initializers/sparkpost/: sparkpost.go
api/initializers/stripe_client/: initializer.go
api/middleware/: admin_check.go  authentication.go  system_user_check.go
api/models/: models.go  structs.go
api/router/: router.go
api/src/: server.ts
api/src/routes/: auth.ts  index.ts  (+1 more)
api/structs/: alert.go  application_ws_room.go  client.go  mod.go
api/websockets/: hub.go
client/: .env.development  .env.production  .env.staging  index.html  package.json  pnpm-lock.yaml  tsconfig.json  tsconfig.node.tsbuildinfo  vite.config.ts
client/src/: app.vue  main.ts
client/src-tauri/: Cargo.toml  rustfmt.toml  tauri.conf.json
client/src-tauri/icons/: icon.icns
client/src-tauri/src/: main.rs
(+131 files in other folders)
