[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
default-run = "app"
edition = "2021"
rust-version = "1.57"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.0.4", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0.146", features = ["derive"] }
tauri = { version = "1.1.1", features = ["api-all", "system-tray"] }
tokio = { version = "1.21.0", features = ["full"] }
reqwest = { version = "0.11.11", features = ["json"] }
chrono = { version = "0.4.22", features = ["serde"] }
tokio-tungstenite = "0.17.2"
uuid = { version = "1.2.1", features = ["v4"] }
notify-rust = "4.5.10"

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = [ "custom-protocol" ]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = [ "tauri/custom-protocol" ]
